# ComitSwapBot

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  USAGE.md  demo_bot.py  docker-compose.yml  pyproject.toml  repomix-output.xml  requirements.txt  setup.py  setup_and_test.py  test_twitter_post.py
.github/workflows/: ci.yml  release.yml
comit_swap_bot/: __init__.py  __main__.py  attribution.py  cli.py  config.py  database.py  health.py  models.py  notifiers.py  orchestrator.py  price_fetcher.py  swap_watcher.py
tests/: test_attribution.py  test_notifiers.py  test_price_fetcher.py  test_swap_watcher.py
